--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,61 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Raleway|Open+Sans|Oswald|Roboto');
+
+body {
+  background: #355c7d;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+.random {
+  background: #f67280;
+  padding: 2vw;
+  font-size: 2vw;
+}
+
+.form {
+  margin: 3vw;
+}
+
+.input {
+  font-size: 2.1vw;
+}
+
+.result-list {
+  border: 2px solid #c06c84;
+  background: #6c5b7b;
   color: white;
+  padding: 1.4vw;
+  margin: 3vw;
 }
 
-.App-title {
-  font-size: 1.5em;
+.result-list:hover {
+  border: 2px solid #6c5b7b;
+  background: #c06c84;
 }
 
-.App-intro {
-  font-size: large;
+.title {
+  font-family: 'Oswald', sans-serif;
+  font-size: 3vw;
+  margin: 0;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.snippet {
+  font-family: 'Raleway', sans-serif;
+  line-height: 2vw;
+}
+
+a:active,
+a:visited,
+a:link
+ {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  color: pink;
 }
